[gd_scene load_steps=6 format=3 uid="uid://2chork0pmvce"]

[ext_resource type="Script" uid="uid://dernpjykn1l6n" path="res://Scripts/Menu.gd" id="1_3kf3n"]
[ext_resource type="FontFile" uid="uid://bf1wvyni0slqf" path="res://Fonts/JosefinSans-Bold.ttf" id="2_6pedr"]
[ext_resource type="Texture2D" uid="uid://dsvf0k25rqwiq" path="res://Sprites/BackgroundMenu 2.png" id="2_idohh"]
[ext_resource type="Theme" uid="uid://bnq0c4tcmm3r3" path="res://Themes/ButtonTheme.tres" id="4_s2c3o"]
[ext_resource type="Script" uid="uid://dqx8534mqybbs" path="res://Scripts/ButtonController.gd" id="5_ma218"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kf3n")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_idohh")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 0

[node name="Title" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="Label" parent="MarginContainer/Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_6pedr")
theme_override_font_sizes/font_size = 100
text = "Queens"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="Start" type="Button" parent="MarginContainer/Buttons" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_s2c3o")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_ma218")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Buttons/Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Button" parent="MarginContainer/Buttons" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_s2c3o")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_ma218")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Buttons/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="MarginContainer/Buttons" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_s2c3o")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_ma218")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="MarginContainer/Buttons/Start" to="MarginContainer/Buttons/Start" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Buttons/Start" to="MarginContainer/Buttons/Start" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Buttons/Credits" to="MarginContainer/Buttons/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Buttons/Credits" to="MarginContainer/Buttons/Credits" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Buttons/Exit" to="MarginContainer/Buttons/Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Buttons/Exit" to="MarginContainer/Buttons/Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Buttons/Exit" to="." method="_on_exit_pressed"]
